Fix for collapsable table details

--- a/indico/htdocs/sass/partials/_tables.scss
+++ b/indico/htdocs/sass/partials/_tables.scss
@@ -275,6 +275,7 @@ td.i-table {
 
             &.details-value {
                 width: 80%;
+                margin: 0;
             }
         }
     }
